--- a/diffusion_policy/config/eval_config/eval_config_d4rl.yaml
+++ b/diffusion_policy/config/eval_config/eval_config_d4rl.yaml
@@ -8,21 +8,26 @@ normalizer_dir: ???
 attention_estimator_dir: ???
 device: "cuda:0"
 seed: 10000
+init_catt: 10.0
+init_dcatt: 5.0
 
 env_runner:
-  _target_: diffusion_policy.env_runner.robomimic_lowdim_ADP_jumpying_disturbance_runner_by_avg_length.RobomimicLowdimRunner
+  _target_: diffusion_policy.env_runner.d4rl_lowdim_ADP_runner.D4RLLowdimRunner
   n_test: 200
   n_test_vis: 200
   max_steps: 70
   n_action_steps: 3
   render_hw: [256,256]
-  fps: 10
+  fps: 20
   crf: 22
   n_envs: 28
   uniform_horizon: false
   n_train: 0
   n_train_vis: 0
   max_attention: 2.5
+  min_n_action_steps: 2
+  attention_exponent: 1.0
+  
 
 hydra:
   job:
