--- a/diffusion_policy/config/eval_config/disturbance/base_disturbance_generator.yaml
+++ b/diffusion_policy/config/eval_config/disturbance/base_disturbance_generator.yaml
@@ -1,4 +1,4 @@
 name: base_disturbance_generator
 
-disturbance_generator:
+generator:
   _target_: diffusion_policy.env_runner.disturbance_generator.base_disturbance_generator.BaseDisturbanceGenerator
