tag inserted in order to discriminate ddpm and ddim

--- a/diffusion_policy/config/train_diffusion_unet_ddim_lowdim_workspace.yaml
+++ b/diffusion_policy/config/train_diffusion_unet_ddim_lowdim_workspace.yaml
@@ -119,7 +119,7 @@ logging:
   resume: True
   mode: online
   name: ${now:%Y.%m.%d-%H.%M.%S}_${name}_${task_name}
-  tags: ["${name}", "${task_name}", "${exp_name}"]
+  tags: ["${name}", "${task_name}", "${exp_name}", "ddim"]
   id: null
   group: null
 
