--- a/diffusion_policy/config/train_diffusion_unet_real_hybrid_workspace.yaml
+++ b/diffusion_policy/config/train_diffusion_unet_real_hybrid_workspace.yaml
@@ -114,7 +114,7 @@ logging:
   resume: True
   mode: online
   name: ${now:%Y.%m.%d-%H.%M.%S}_${name}_${task_name}
-  tags: ["${name}", "${task_name}", "${exp_name}"]
+  tags: ["${name}", "${task_name}", "${exp_name}", "ddpm"]
   id: null
   group: null
 
