--- a/my_env_4.yaml
+++ b/my_env_4.yaml
@@ -444,4 +444,5 @@ dependencies:
       - triton==3.3.1
       - typer==0.16.0
       - typing-extensions==4.14.1
+      - PyOpenGL-accelerate
 prefix: /home/cspark/anaconda3/envs/adp
