add image feature dim in distortion policy

--- a/diffusion_policy/config/train_diffusion_unet_hybrid_workspace_distortion_loss.yaml
+++ b/diffusion_policy/config/train_diffusion_unet_hybrid_workspace_distortion_loss.yaml
@@ -50,6 +50,7 @@ policy:
   
   distortion_loss_weight: 0.01
   distortion_ratio: 0.001
+  image_feature_dim: 64
 
   # scheduler.step params
   # predict_epsilon: True
