--- a/diffusion_policy/config/train_diffusion_unet_hybrid_workspace_distortion_loss.yaml
+++ b/diffusion_policy/config/train_diffusion_unet_hybrid_workspace_distortion_loss.yaml
@@ -14,7 +14,7 @@ horizon: 16
 n_obs_steps: 2
 n_action_steps: 8
 n_latency_steps: 0
-dataset_obs_steps: ${eval:'${n_obs_steps}*2'}
+dataset_obs_steps: ${eval:'${n_obs_steps}*2'}  # This is for calculating the distortion loss of two consecutive observations
 past_action_visible: False
 keypoint_visible_rate: 1.0
 obs_as_global_cond: True
